// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card test suite: actions 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Card
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  >
    <div
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <div
        style={
          {
            "marginRight": "16px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
          data-cy="first-action"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-cy="first-action-icon"
            data-testid="AccountCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
            />
          </svg>
        </button>
         
      </div>
      <div
        style={
          {
            "marginRight": "16px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
          data-cy="second-action"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-cy="second-action-icon"
            data-testid="AccountCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
            />
          </svg>
        </button>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Card test suite: collapsible 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Card
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  >
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
      data-cy="card-collapse"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-cy="card-collapse-icon"
        data-testid="KeyboardArrowDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Card test suite: dataCy 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="custom"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="custom-title"
      >
        Card
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="custom-subtitle"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="custom-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  />
</div>
`;

exports[`Card test suite: default 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Card
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  />
</div>
`;

exports[`Card test suite: icon 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-avatar css-1ssile9-MuiCardHeader-avatar"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
        data-cy="card-avatar"
        style={
          {
            "backgroundColor": "#1976d2",
            "color": "#fff",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-cy="card-avatar-icon"
          data-testid="AccountCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Card
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  />
</div>
`;

exports[`Card test suite: loading 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title-loading"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle-loading"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
      style={
        {
          "height": "128px",
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Card test suite: localized 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="locale.title"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="locale.title-title"
      >
        Title
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="locale.title-subtitle"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="locale.title-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  />
</div>
`;

exports[`Card test suite: subtitle 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Card
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      >
        Subtitle
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  />
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  />
</div>
`;
